--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,3 +17,30 @@
     margin-right: 10%;
     margin-top: 10%;
 }
+
+
+.torSection {
+    padding: 20px;
+    background-color: black;
+}
+
+.torTitle {
+    color: green;
+    text-align: center;
+    text-decoration: none;
+}
+
+.torTitle h2 {
+    margin-bottom: 20px;
+}
+
+
+.torDiv {
+    display: flex;
+    color: whitesmoke;
+}
+
+.torServerLink {
+    color: green;
+    text-decoration: none;
+}
