--- a/src/pages/Home/Sections/MiddlePane/MiddlePane.css
+++ b/src/pages/Home/Sections/MiddlePane/MiddlePane.css
@@ -1,21 +1,29 @@
 .middlePane {
-    background-color: #121212;
+    background: url(../../../../images/lock-ondata-SS-1920x1280.jpg);
     color: whitesmoke;
-    width: 100vw;
+    background-size: cover;
     height: 100vh;
-    padding: 40px;
 }
 
 .sectionTitle {
-    text-align: left;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .text {
-    float: left
+    margin: 15% 10% 0 0 ;
+    background: rgba(54, 54, 54, 0.7);
+    float: right;
+    width: 30vw;
+    padding: 40px;
+    font-weight: bold;
+    border-radius: 40%;
+    text-align: center;
 }
 
-.eye {
+/* .eye {
     width:400px;
     height: 400px;
     float: right;
-}
+} */
